    - fixed EG3 (pitch envelope) synthesis which was neutral all the time
    - implemented portamento mode and solo mode (a.k.a 'mono mode'):
      all modes can be altered via standard GM messages, that is CC5 for
      altering portamento time, CC65 for enabling / disabling portamento
      mode, CC126 for enabling solo mode and CC127 for disabling solo mode

  * LSCP server:
    - fixed application exit on broken pipe error (fixes bug #20)
    - fixed the notification messages delay due to lack of
      network activity (fixes bug #26)
    - fixed parser bug which occured on space(s) within device parameters
      (e.g. "SET AUDIO_OUTPUT_CHANNEL_PARAMETER 0 0 SOMEPARAM='foo bar'")

  * MIDI driver:
    - fixed legacy sysex code which caused dispatching of MIDI SysEx
      messages several times instead of once

  * general changes:
    - support for muting sampler channels and solo mode of the same, two new
      LSCP commands ("SET CHANNEL MUTE" and "SET CHANNEL SOLO") and two new
      fields ("MUTE" and "SOLO") for command "GET CHANNEL INFO" were
      introduced for this, the behavior is the same like on a mixer console
      (patch by Grigor Iliev, a bit adjusted). Also added configure option
      --enable-process-muted-channels which can be used to enable the
      processing of muted channels.
    - support for sostenuto pedal
    - support for monitoring the total number of active voices
      (new LSCP commands: GET TOTAL_VOICE_COUNT, GET TOTAL_VOICE_COUNT_MAX,
      SUBSCRIBE TOTAL_VOICE_COUNT, UNSUBSCRIBE TOTAL_VOICE_COUNT)

Version 0.3.3 (15 July 2005)

  * packaging changes:
    - fixed compilation with gcc 4.0

  * Gigasampler format engine:
    - LFO preprocessing was performed even though the respective LFO was
      disabled by the instrument patch (minor efficiency fix)
    - if period time of chosen audio device is too small (< MIN_RELEASE_TIME)
      for volume ramp downs in the same fragment (needed for current voice